# stack-test

./: .gitignore  README.md
k8s/argocd/base/: applicationsets.yaml  kustomization.yaml  project.yaml
k8s/bootstrap/eksctl/: README.md  bootstrap.sh  cluster.yaml  permission-boundary.json
k8s/bootstrap/platform/: README.md  cluster.yaml  pyproject.toml
k8s/bootstrap/platform/infractl/: __init__.py  cli.py  config.py
k8s/bootstrap/platform/infractl/commands/: __init__.py  bootstrap.py
k8s/bootstrap/platform/infractl/services/: __init__.py  argocd.py  aws.py  git.py  kubernetes.py
k8s/bootstrap/platform/platform/: cli.py  config.py
k8s/bootstrap/platform/platform/commands/: __init__.py  bootstrap.py
k8s/bootstrap/platform/platform/services/: __init__.py  argocd.py  aws.py  eksctl.py  git.py  kubernetes.py
k8s/crossplane-providers/: external-secrets.yaml  kustomization.yaml  provider-config.yaml  providers.yaml
k8s/crossplane/base/: kustomization.yaml  namespace.yaml  values.yaml
k8s/infrastructure/base/: aurora-claim.yaml  aurora-composition.yaml  aurora-security-group.yaml  aws-lb-controller-claim.yaml  aws-lb-controller-composition.yaml  config-from-cluster-info.yaml  eks-claim.yaml  eks-composition.yaml  eks-iam.yaml  eso-iam.yaml  kustomization.yaml  nat.yaml  route53.yaml  routes.yaml  secrets-init-job.yaml  secrets-manager.yaml  vpc.yaml
k8s/supabase/base/: auth.yaml  configmap.yaml  crossplane-storage.yaml  external-secrets.yaml  kong.yaml  kustomization.yaml  meta.yaml  namespace.yaml  postgres.yaml  realtime.yaml  rest.yaml  secrets.yaml  storage-serviceaccount.yaml  storage.yaml  studio.yaml
(+15 files in other folders)
